Adding Authentication and ContactDetailsContext migrations

--- a/ContactDetails/Views/Contacts/Index.cshtml
+++ b/ContactDetails/Views/Contacts/Index.cshtml
@@ -97,3 +97,9 @@
 }
 
 </table>
+
+<h3>Welcom</h3>
+@ViewBag.UserName - @ViewBag.UserId
+
+<h2>Welcome</h2>
+@ViewData["UserName"] - @ViewData["UserId"]
