--- a/ContactDetails/Views/Contacts/Delete.cshtml
+++ b/ContactDetails/Views/Contacts/Delete.cshtml
@@ -1,24 +1,16 @@
 ﻿@model ContactDetails.Models.Contact
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete the Contact";
 }
 
-<h2>Delete</h2>
+<h2>@ViewBag.Title</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Contact</h4>
-    <hr />
+    
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
-
+      
         <dt>
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
